Add requirements for deploying to maven central