@@ -35,6 +35,8 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>target/combined-sources</sourceDirectory>
+
         <plugins>
             <plugin>
                 <groupId>${project.groupId}</groupId>
@@ -255,7 +257,7 @@
 
                                 <!-- our sources take precedence -->
                                 <resource>
-                                    <directory>${project.build.sourceDirectory}</directory>
+                                    <directory>${project.basedir}/src/main/java</directory>
                                 </resource>
                             </resources>
                         </configuration>
@@ -289,7 +291,40 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <sourcepath>${project.build.directory}/combined-sources</sourcepath>
+                            <additionalOptions>
+                                <additionalOption>--add-reads</additionalOption>
+                                <additionalOption>java.base=ALL-UNNAMED</additionalOption>
+                            </additionalOptions>
+                            <failOnError>false</failOnError>
+                            <failOnWarnings>false</failOnWarnings>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
